--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "author": "Baklava Chef",
   "Access-Control-Allow-Origin": "*",
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/styles": "^4.11.4",
     "@walletconnect/web3-provider": "^1.6.6",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -21,10 +19,10 @@
     "chai-bignumber": "3.0.0",
     "cors": "^2.8.5",
     "identicon.js": "^2.3.3",
-    "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-burger-menu": "^3.0.6",
-    "react-dom": "16.8.4",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-pdf": "^5.7.1",
     "react-responsive": "^9.0.0-beta.7",
